...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />

...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:focusable="true">

                        <EditText
                            android:id="@+id/hostUrlInput"
                            style="@style/EditText.Authenticator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:drawablePadding="5dp"
                            android:hint="@string/auth_host_url"
...
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_action_refresh"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/server_status_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/auth_testing_connection"
                        android:drawableStart="@android:drawable/stat_notify_sync"
                        android:drawablePadding="5dp"
...
                        android:textColor="@color/login_credentials_text_color"
                        android:visibility="gone"
                        app:drawableTint="@color/login_credentials_text_color"
                        tools:text="@string/auth_unauthorized" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/setup_btn_login"
                        android:text="@string/setup_btn_login"
                        android:theme="@style/Button.Authenticator"
...
