...
    <string name="auth_unknown_error_title">Unknown error occurred!</string>
    <string name="auth_incorrect_path_title">Server instance not found</string>
    <string name="auth_incorrect_address_title">Wrong server address format</string>
    <string name="auth_ssl_general_error_title">SSL initialization failed</string>
    <string name="auth_bad_oc_version_title">Unrecognized server version</string>
    <string name="auth_wrong_connection_title">Couldn\'t establish connection</string>
    <string name="auth_secure_connection">Secure connection established</string>
    <string name="auth_unauthorized">Wrong username or password</string>
    <string name="auth_oauth_error">Unsuccessful authorization</string>
    <string name="auth_oauth_error_access_denied">Access denied by authorization server</string>
    <string name="auth_wtf_reenter_URL">Unexpected state; please enter the server address again</string>
    <string name="auth_expired_oauth_token_toast">Your authorization expired. Please, authorize again</string>
    <string name="auth_expired_basic_auth_toast">Please enter the current password</string>
...
