...
    <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
    <string name="confirmation_touches_with_other_windows_message">Use this feature at your own risk. A malicious application could try to spoof you into unknowingly performing some actions, using other views.</string>
    <string name="prefs_subsection_picture_uploads">Automatic picture uploads</string>
    <string name="prefs_subsection_picture_uploads_summary">Manage location and behavior of the pictures uploaded automatically</string>
    <string name="prefs_subsection_video_uploads">Automatic video uploads</string>
    <string name="prefs_subsection_video_uploads_summary">Manage location and behavior of the videos uploaded automatically</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
    <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>
    <string name="prefs_camera_picture_upload_conditions_title">Conditions to execute uploads</string>
    <string name="prefs_camera_picture_upload_conditions_summary">Uploads will be triggered when all selected options are fulfilled</string>
    <string name="prefs_camera_picture_upload_on_wifi">Upload pictures via wifi only</string>
    <string name="prefs_camera_picture_upload_on_charging">Upload pictures only when charging</string>
    <string name="prefs_camera_video_upload">Video uploads</string>
    <string name="prefs_camera_video_upload_summary">Automatically upload videos recorded by camera</string>
    <string name="prefs_camera_video_upload_path_title">Video upload path</string>
    <string name="prefs_camera_video_upload_on_wifi">Upload videos via wifi only</string>
    <string name="prefs_camera_video_upload_on_charging">Upload videos only when charging</string>
    <string name="prefs_automatic_uploads_not_available_users_light">Automatic uploads are not available for users light</string>
    <string name="prefs_subsection_advanced">Advanced</string>
    <string name="prefs_subsection_notifications">Manage notifications</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
...
    <string name="common_no">No</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_back">Back</string>
    <string name="common_loading">Loading…</string>
    <string name="common_error_unknown">unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="common_important">Important</string>
    <string name="common_set">Set</string>
    <string name="upload_chooser_title">Upload from</string>
    <string name="uploader_info_dirname">Folder name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading…</string>
    <string name="uploader_upload_succeeded_content_single">%1$s uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
...
    <string name="placeholder_timestamp">2012/05/18 12:23 PM</string>
    <string name="placeholder_media_time">12:23:45</string>

    <string name="confirmation_disable_camera_uploads_title">Confirm</string>
    <string name="confirmation_disable_pictures_upload_message">Are you sure you want to disable this feature? The pending pictures will not be uploaded.</string>
    <string name="confirmation_disable_videos_upload_message">Are you sure you want to disable this feature? The pending videos will not be uploaded.</string>
    <string name="proper_pics_folder_warning_camera_upload">Please make sure the folder selected is where the camera you are using saves the pictures taken. Otherwise, the feature will not be able to detect your pictures. Keep in mind that pictures will be uploaded in at least 15 minutes after taking them. For a better performance, make sure in your device settings that %1$s is allowed to run in b
    <string name="proper_videos_folder_warning_camera_upload">Please make sure the folder selected is where the camera you are using saves the videos recorded. Otherwise, the feature will not be able to detect your videos. Keep in mind that videos will be uploaded in at least 15 minutes after recording them. For a better performance, make sure in your device settings that %1$s is allowed to run in
    <string name="conflict_title">File in conflict</string>
    <string name="conflict_description">There is a conflict in file %1$s, tap to solve it.</string>
    <string name="conflict_message">Which files do you want to keep? If you select both versions, the local file will have a number added to its name.</string>
    <string name="conflict_keep_both">Keep both</string>
    <string name="conflict_use_local_version">local version</string>
    <string name="conflict_use_server_version">server version</string>
...
